fix ( contrast error ) : wave error corrigée + petit changement structure html

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,24 @@
+html,
 body {
-  max-width: 1920px;
   margin: auto;
+  padding: 0;
+  width: 100vw;
+  max-width: 1920px;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 * {
   font-family: "Inter";
   font-style: normal;
 }
+
 .top-header {
   background-color: white;
   position: sticky;
@@ -110,6 +123,12 @@ body {
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 100%;
+  background-image: inherit !important;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+  opacity: 0.8;
 }
 
 /* Supprimer le focus par défaut du bouton */
@@ -155,11 +174,13 @@ body {
 }
 .gallery-item {
   position: absolute;
+  max-width: 1920px;
   width: 100%;
   height: 100%;
   object-fit: cover;
   padding: 0.5em;
 }
+
 .mg-prev,
 .mg-next {
   width: 30px;
@@ -388,4 +409,40 @@ input[type="submit"] {
   .picture {
     width: 80%;
   }
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1055;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+}
+.modal-open {
+  max-width: 1920px !important;
+}
+
+.lightboxImage {
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+  width: 100%;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+  color: #000;
+  background-color: white;
 }
